--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -551,115 +551,22 @@ h1 {
 
 #demo-19 .slide {
     background-color: #6680ff;
+    color: #EEE;
+    font-size: 1em;
+    line-height: 1em;
 }
 
-
-/*
-    And the "it's in 3D" step again brings some 3D typography - just for fun.
-
-    Because we want to position <span> elements in 3D we set transform-style to
-    `preserve-3d` on the paragraph.
-    It is not needed by webkit browsers, but it is in Firefox. It's hard to say
-    which behaviour is correct as 3D transforms spec is not very clear about it.
-*/
-
-#its-in-3d p {
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    /* Y U need this Firefox?! */
-    -ms-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+#demo-19 .active {
+    opacity: 1;
 }
 
-
-/*
-    Below we position each word separately along Z axis and we want it to transition
-    to default position in 0.5s when the step gets `present` class.
-
-    Quite a simple idea, but lot's of styles and prefixes.
-*/
-
-#its-in-3d span,
-#its-in-3d b {
-    display: inline-block;
-    -webkit-transform: translateZ(40px);
-    -moz-transform: translateZ(40px);
-    -ms-transform: translateZ(40px);
-    -o-transform: translateZ(40px);
-    transform: translateZ(40px);
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
+#demo-19 .notActive {
+    opacity: .5;
 }
 
-#its-in-3d .have {
-    -webkit-transform: translateZ(-40px);
-    -moz-transform: translateZ(-40px);
-    -ms-transform: translateZ(-40px);
-    -o-transform: translateZ(-40px);
-    transform: translateZ(-40px);
+#demo-19 img {
+    height: 30%;
 }
-
-#its-in-3d .you {
-    -webkit-transform: translateZ(20px);
-    -moz-transform: translateZ(20px);
-    -ms-transform: translateZ(20px);
-    -o-transform: translateZ(20px);
-    transform: translateZ(20px);
-}
-
-#its-in-3d .noticed {
-    -webkit-transform: translateZ(-40px);
-    -moz-transform: translateZ(-40px);
-    -ms-transform: translateZ(-40px);
-    -o-transform: translateZ(-40px);
-    transform: translateZ(-40px);
-}
-
-#its-in-3d .its {
-    -webkit-transform: translateZ(60px);
-    -moz-transform: translateZ(60px);
-    -ms-transform: translateZ(60px);
-    -o-transform: translateZ(60px);
-    transform: translateZ(60px);
-}
-
-#its-in-3d .in {
-    -webkit-transform: translateZ(-10px);
-    -moz-transform: translateZ(-10px);
-    -ms-transform: translateZ(-10px);
-    -o-transform: translateZ(-10px);
-    transform: translateZ(-10px);
-}
-
-#its-in-3d .footnote {
-    font-size: 32px;
-    -webkit-transform: translateZ(-10px);
-    -moz-transform: translateZ(-10px);
-    -ms-transform: translateZ(-10px);
-    -o-transform: translateZ(-10px);
-    transform: translateZ(-10px);
-}
-
-#its-in-3d.present span,
-#its-in-3d.present b {
-    -webkit-transform: translateZ(0px);
-    -moz-transform: translateZ(0px);
-    -ms-transform: translateZ(0px);
-    -o-transform: translateZ(0px);
-    transform: translateZ(0px);
-}
-
-
-/*
-    The last step is an overview.
-    There is no content in it, so we make sure it's not visible because we want
-    to be able to click on other steps.
-
-*/
 
 #overview {
     display: none
